--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,12 @@
- 
+ // fonts
+ @import './fonts';
+
+ // commons
+ @import './variables';
+ @import './mixins';
+ @import './reset';
+ @import './animations';
+ @import './grid';
+ @import './basic';
+
+ // pages
