--- a/resources/sass/_basic.scss
+++ b/resources/sass/_basic.scss
@@ -1,6 +1,253 @@
 html {
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 400;
     font-style: normal;
     font-family: 'Quicksand', sans-serif;
+    letter-spacing: 0;
+
+    @include breakpoint-min(1201px) {
+        font-size: 15px;
+    }
+}
+
+p {
+    font-size: 1rem;
+    font-weight: 400;
+
+    &.white {
+        color: #ffffff;
+    }
+}
+
+.heading {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 700;
+
+    @include breakpoint-min(1201px) {
+        margin-bottom: 15px;
+        font-size: 48px;
+    }
+
+    &.white {
+        color: #ffffff;
+    }
+
+    &.small {
+        font-size: 22px;
+        margin-bottom: 10px;
+
+        @include breakpoint-min(1201px) {
+            font-size: 30px;
+        }
+    }
+
+    &.align-left {
+        text-align: left;
+    }
+}
+
+.subheading {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+
+    &.purple {
+        color: #d5d8f3;
+    }
+
+    &.grey {
+        color: #888888;
+    }
+
+    @include breakpoint-min(1201px) {
+        font-size: 18px;
+    }
+}
+
+.box-heading {
+    font-size: 16px;
+    margin: 5px 0;
+    font-weight: 400;
+}
+
+.box-subheading {
+    font-size: 14px;
+    color: #b1b1b1;
+    font-weight: 400;
+
+    &.blue {
+        color: #1e83f0;
+    }
+
+    &.dark-grey {
+        color: #888888;
+    }
+
+    &.icon-left {
+        padding-left: 25px;
+        background: no-repeat left center / 12px;
+    }
+
+    &.icon-right {
+        padding-right: 25px;
+        background: no-repeat right center / 12px;
+    }
+
+    &.icon-right,
+    &.icon-left {
+        &.map-marker {
+            background-image: url('/images/icons/map-marker-grey.svg');
+        }
+    }
+}
+
+.input {
+    width: 100%;
+    padding: 20px 30px;
+    border-radius: 8px;
+    border: 0;
+    font-size: 0.9rem;
+    color: #000000;
+    letter-spacing: 0;
+    background: #ffffff no-repeat right 25px center / auto;
+
+    &::placeholder {
+        color: #a7a7a7;
+    }
+
+    &.icon-keyboard {
+        background-image: url('/images/icons/keyboard-pink.svg');
+    }
+
+    &.icon-marker {
+        background-image: url('/images/icons/map-marker-pink.svg');
+    }
+}
+
+.btn {
+    padding: 15px 30px;
+    font-size: 0.9rem;
+    color: #000000;
+    letter-spacing: 0;
+    border-radius: 5px;
+    background-color: #999999;
+    transition: all 0.3s;
+
+    @include breakpoint-min(1201px) {
+        &:hover {
+            background-color: #333333 !important;
+            color: #ffffff !important;
+        }
+    }
+
+    &.badge {
+        border-radius: 3px;
+        padding: 5px 10px;
+        border: 1px solid #ffffff;
+        background-color: transparent;
+        color: #ffffff;
+    }
+
+    &.only-icon {
+        background: #8b91dd url('/images/icons/magnifier-white.svg') no-repeat center center / 32px;
+    }
+
+    &.white-bg {
+        background-color: #ffffff;
+    }
+
+    &.border-grey {
+        border: 1px solid #d2d2d2;
+    }
+}
+
+.tabs {
+    display: flex;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #d2d2d2;
+
+    @include breakpoint-max(767px) {
+        width: 100%;
+    }
+
+    &-wrapper {
+        display: flex;
+        justify-content: center;
+    }
+
+    li {
+        text-align: center;
+        padding: 12px 5px;
+        border-radius: 4px;
+        background-color: transparent;
+        font-size: 14px;
+        color: #000000;
+        font-weight: 700;
+        transition: all 0.3s;
+        cursor: pointer;
+
+        @include breakpoint-max(767px) {
+            flex: 1;
+        }
+
+        @include breakpoint-min(768px) {
+            width: 180px;
+            padding: 12px 15px;
+            font-size: 18px;
+        }
+
+        &.is-active {
+            color: #ffffff;
+            background-color: #1e83f0;
+        }
+    }
+}
+
+.badge {
+    width: 90px;
+    padding: 5px 12px;
+    border-radius: 3px;
+    text-align: center;
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 400;
+    background-color: #999999;
+
+    &.purple {
+        background-color: #8b91dd;
+    }
+
+    &.pink {
+        background-color: #fb236a;
+    }
+
+    &.green-light {
+        background-color: #7dc246;
+    }
+
+    &.green-dark {
+        background-color: #26ae61;
+    }
+}
+
+.icon-box {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: no-repeat center center / 100%;
+
+    &.margin-right {
+        margin-right: 16px;
+    }
+
+    &.margin-left {
+        margin-left: 16px;
+    }
+
+    &.favorite {
+        background-image: url('/images/icons/favorite-grey.svg');
+    }
 }
