--- a/resources/sass/_grid.scss
+++ b/resources/sass/_grid.scss
@@ -9,13 +9,9 @@ $flexboxgrid-breakpoints: sm 768px, md 1000px, lg 1201px !default;
 
 // Breakpoints:
 // - lg from 1201px to end
-// - md from 1000px to 1199px
+// - md from 1000px to 2000px
 // - sm from 768px to 999px
 // - xs from begin to 767px
-
-//
-// -- Stop editing -- //
-//
 
 $gutter-compensation: $flexboxgrid-gutter-width * 0.5 * -1;
 $half-gutter-width: $flexboxgrid-gutter-width * 0.5;
@@ -43,6 +39,10 @@ $half-gutter-width: $flexboxgrid-gutter-width * 0.5;
 
     &.reverse {
         flex-direction: row-reverse;
+    }
+
+    &.no-margin {
+        margin: 0;
     }
 }
 
@@ -93,17 +93,17 @@ $name: xs;
 
 .start-#{$name} {
     justify-content: flex-start;
-    text-align: left;
+    // text-align: left;
 }
 
 .center-#{$name} {
     justify-content: center;
-    text-align: center;
+    // text-align: center;
 }
 
 .end-#{$name} {
     justify-content: flex-end;
-    text-align: right;
+    // text-align: right;
 }
 
 .top-#{$name} {
@@ -172,17 +172,17 @@ $name: xs;
 
         .start-#{$name} {
             justify-content: flex-start;
-            text-align: left;
+            // text-align: left;
         }
 
         .center-#{$name} {
             justify-content: center;
-            text-align: center;
+            // text-align: center;
         }
 
         .end-#{$name} {
             justify-content: flex-end;
-            text-align: right;
+            // text-align: right;
         }
 
         .top-#{$name} {
