--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,13 +1,16 @@
- // fonts
- @import './fonts';
+// fonts
+@import './fonts';
 
- // commons
- @import './variables';
- @import './mixins';
- @import './reset';
- @import './animations';
- @import './grid';
- @import './basic';
+// commons
+@import './variables';
+@import './mixins';
+@import './reset';
+@import './animations';
+@import './grid';
+@import './basic';
 
- // pages
- @import './pages/home-page';
+// components
+@import './components/header';
+
+// pages
+@import './pages/home-page';
