--- a/resources/sass/_basic.scss
+++ b/resources/sass/_basic.scss
@@ -262,3 +262,23 @@ textarea {
         background-image: url('/images/icons/favorite-grey.svg');
     }
 }
+
+.download-btn {
+    padding: 12px 18px 12px 74px;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    background: no-repeat left 24px center / 32px;
+    color: #ffffff;
+
+    @include breakpoint-max(767px) {
+        margin-bottom: 20px;
+    }
+
+    &.apple {
+        background-image: url('/images/icons/apple-logo.svg');
+    }
+
+    &.android {
+        background-image: url('/images/icons/android-logo.svg');
+    }
+}
