add register modal

--- a/resources/sass/_basic.scss
+++ b/resources/sass/_basic.scss
@@ -213,6 +213,7 @@ textarea {
 
     &.auth {
         width: 100%;
+        margin-top: 30px;
         font-weight: 700;
         font-size: 1.3rem;
         color: #ffffff;
