--- a/resources/sass/components/modal.scss
+++ b/resources/sass/components/modal.scss
@@ -41,7 +41,7 @@
     &-additional-bar {
         display: flex;
         justify-content: space-between;
-        margin: 10px 0 30px 0;
+        margin-top: 10px;
         padding: 0 5px;
     }
 
