--- a/resources/sass/_basic.scss
+++ b/resources/sass/_basic.scss
@@ -128,6 +128,38 @@ textarea {
         color: #a7a7a7;
     }
 
+    &.dropdown {
+        position: relative;
+        cursor: pointer;
+
+        span {
+            color: #a7a7a7;
+        }
+
+        ul {
+            display: none;
+            position: absolute;
+            z-index: 5;
+            bottom: 0;
+            left: 0;
+            transform: translate(-2px, calc(100% - 5px));
+            width: calc(100% + 4px);
+            padding: 10px 30px;
+            background-color: #ffffff;
+            border: 2px solid #e6e8ef;
+            border-top-width: 1px;
+            border-radius: 0 0 8px 8px;
+        }
+
+        li {
+            padding: 5px 0;
+        }
+
+        &.is-active > ul {
+            display: block;
+        }
+    }
+
     &.icon-keyboard {
         background-image: url('/images/icons/keyboard-pink.svg');
     }
@@ -150,6 +182,11 @@ textarea {
 
     &.icon-phone {
         background-image: url('/images/icons/phone-pink.svg');
+    }
+
+    &.icon-dropdown {
+        background-image: url('/images/icons/arrow-down-dropdown-pink.svg');
+        background-size: 18px;
     }
 
     &.border-grey {
