--- a/resources/sass/components/modal.scss
+++ b/resources/sass/components/modal.scss
@@ -1,5 +1,6 @@
 .modal {
     &-wrapper {
+        display: none;
         position: fixed;
         z-index: 999;
         top: 0;
@@ -7,6 +8,10 @@
         width: 100%;
         height: 100vh;
         background-color: rgba(33, 33, 33, 0.85);
+
+        &.is-active {
+            display: block;
+        }
     }
 
     &-main {
