move login and register modals to separately views

--- a/resources/sass/components/header.scss
+++ b/resources/sass/components/header.scss
@@ -107,6 +107,7 @@
             order: -1;
         }
 
+        a,
         button {
             padding-left: 26px;
             background: transparent;
