--- a/resources/sass/components/modal.scss
+++ b/resources/sass/components/modal.scss
@@ -1,6 +1,6 @@
 .modal {
     &-wrapper {
-        display: none;
+        display: block;
         position: fixed;
         z-index: 999;
         top: 0;
@@ -9,8 +9,8 @@
         height: 100vh;
         background-color: rgba(33, 33, 33, 0.85);
 
-        &.is-active {
-            display: block;
+        &.is-hide {
+            display: none;
         }
     }
 
