--- a/resources/sass/components/modal.scss
+++ b/resources/sass/components/modal.scss
@@ -12,6 +12,10 @@
         &.is-hide {
             display: none;
         }
+
+        &-auth {
+            background-color: rgb(230, 232, 239);
+        }
     }
 
     &-main {
@@ -40,6 +44,22 @@
 
         .btn {
             margin: 0 12px;
+        }
+
+        label {
+            & > input[type='radio'] {
+                display: none;
+            }
+
+            input[type='radio']:checked + div.border-purple {
+                background-color: #141f72;
+                color: #ffffff;
+            }
+
+            input[type='radio']:checked + div.border-pink {
+                background-color: #fb236a;
+                color: #ffffff;
+            }
         }
     }
 
