Add basic styles for jobs-list-page and move search form styles to separate file

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,8 @@
 @import './components/header';
 @import './components/footer';
 @import './components/modal';
+@import './components/search-form';
 
 // pages
 @import './pages/home-page';
+@import './pages/jobs-list-page';
