--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 @import './components/footer';
 @import './components/modal';
 @import './components/search-form';
+@import './components/pagination';
 
 // pages
 @import './pages/home-page';
