Add controller method, route  html and icons for single page

--- a/resources/sass/_basic.scss
+++ b/resources/sass/_basic.scss
@@ -274,6 +274,10 @@ textarea {
         color: #ffffff;
         background-color: #141f72;
     }
+
+    &.job-apply {
+        background-color: #a0a5e1;
+    }
 }
 
 .tabs {
